--- a/restaurant-front/src/modules/bartender/pages/new-orders/new-orders.component.html
+++ b/restaurant-front/src/modules/bartender/pages/new-orders/new-orders.component.html
@@ -1,4 +1,9 @@
 
-<div id=page>
-    <app-order-view typeBtn="accept" [note]="this.note" (acceptClicked)="onAccept($event)" (finishClicked)="onFinish($event)" [items] = "this.newItems"></app-order-view>
+<div id=page *ngIf = "this.loaded">
+    <app-order-view
+     typeBtn="accept"
+    [note]="this.note" 
+    (acceptClicked)="onAccept($event)" 
+    (finishClicked)="onFinish($event)" 
+    [items] = "this.newItems"></app-order-view>
 </div>
