--- a/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
+++ b/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
@@ -1,19 +1,23 @@
 <div id="container-div">
     <h3>View orders in progress</h3>
-     <table mat-table [dataSource] ="items" class="mat-elevation-z8">
+     <table mat-table [dataSource] ="observable" class="mat-elevation-z8" matSort
+     (matSortChange)="announceSortChange($event)">
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="name"
+        sortActionDescription="Sort by name"> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
 
       <ng-container matColumnDef="quantity">
-        <th mat-header-cell *matHeaderCellDef> Quantity </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="quantity"
+        sortActionDescription="Sort by quantity"> Quantity </th>
         <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
       </ng-container>
       
       <ng-container matColumnDef="priority">
-        <th mat-header-cell *matHeaderCellDef> Priority </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="priority"
+        sortActionDescription="Sort by priority"> Priority </th>
         <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
       </ng-container>
 
@@ -26,6 +30,7 @@
 
        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </table> 
     <br/>
     <label>Note:</label><br/>
