--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
@@ -44,16 +44,8 @@
     <mat-divider></mat-divider>
 
     <mat-action-list>
-      <!-- <mat-list-item (click)="this.activeView = '1'">Item view</mat-list-item>
-      <mat-list-item (click)="this.activeView = '2'">Menu</mat-list-item> -->
-      <button mat-button class="menu-button" (click)="onItemTableClicked()">
-        <mat-icon>person</mat-icon>
-        <span>Items table</span>
-      </button>
-      <button mat-button class="menu-button" (click)="onPaychecksClicked()">
-        <mat-icon>person</mat-icon>
-        <span>Paychecks</span>
-      </button>
+      <mat-list-item (click)="this.activeView = '1'">Item view</mat-list-item>
+      <mat-list-item (click)="this.activeView = '2'">Menu</mat-list-item>
       <mat-list-item (click)="this.activeView = '3'">Paychecks</mat-list-item>
       <mat-list-item (click)="this.activeView = '4'">Reports</mat-list-item>
     </mat-action-list>
@@ -64,13 +56,9 @@
         <div class="col">
           <div fxLayout="row wrap">
             <ng-container>
-              <!-- <app-item-view *ngIf="this.activeView == '1'"></app-item-view> -->
-              <!-- <app-menu-view *ngIf="this.activeView == '2'"></app-menu-view> -->
-              <app-employees class="paychecks" *ngIf="paychecksWindowOpen === true"></app-employees>
-              <app-item-table class="items" *ngIf="itemsWindowOpen === true"></app-item-table>
-              <app-paycheck-table
-                *ngIf="this.activeView == '3'"
-              ></app-paycheck-table>
+              <app-item-view class="items" *ngIf="this.activeView == '1'"></app-item-view>
+              <app-menu-view *ngIf="this.activeView == '2'"></app-menu-view>
+              <app-employees class="paychecks" *ngIf="this.activeView == '3'"></app-employees>
               <app-report *ngIf="this.activeView == '4'"></app-report>
             </ng-container>
           </div>
