--- a/restaurant-front/src/modules/shared/components/view-notifications/view-notifications.component.html
+++ b/restaurant-front/src/modules/shared/components/view-notifications/view-notifications.component.html
@@ -13,137 +13,137 @@
       <mat-tab>
         <ng-template mat-tab-label> New Notifications </ng-template>
         <mat-action-list class="custom-scroll-bar">
-        <table
-          #newnotif
-          mat-table
-          [dataSource]="dataSourceNew"
-          multiTemplateDataRows
-          class="mat-elevation-z8"
-        >
-          <ng-container
-            matColumnDef="{{ column }}"
-            *ngFor="let column of columnsToDisplay"
+          <table
+            #newnotif
+            mat-table
+            [dataSource]="dataSourceNew"
+            multiTemplateDataRows
+            class="mat-elevation-z8"
           >
-            <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                *ngIf="column == 'active'"
-                class="details"
-                (click)="onViewedNotification(element)"
-                matTooltip="Set notification is inactive."
-              >
-                <mat-icon>check_circle_outline</mat-icon>
-              </button>
-              <div *ngIf="column == 'content'">
-                {{ element[column] | shortenString: [14, "..."] }}
-              </div>
-            </td>
-          </ng-container>
-
-          <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-          <ng-container matColumnDef="expandedDetail">
-            <td
-              mat-cell
-              *matCellDef="let element"
-              [attr.colspan]="columnsToDisplay.length"
+            <ng-container
+              matColumnDef="{{ column }}"
+              *ngFor="let column of columnsToDisplay"
             >
-              <div
-                class="example-element-detail"
-                [@detailExpand]="
-                  element == expandedElement ? 'expanded' : 'collapsed'
-                "
-              >
-                <div class="example-element-description">
-                  {{ element.content }}
+              <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+              <td mat-cell *matCellDef="let element">
+                <button
+                  *ngIf="column == 'active'"
+                  class="details"
+                  (click)="onViewedNotification(element)"
+                  matTooltip="Set notification is inactive."
+                >
+                  <mat-icon>check_circle_outline</mat-icon>
+                </button>
+                <div *ngIf="column == 'content'">
+                  {{ element[column] | shortenString: [14, "..."] }}
                 </div>
-              </div>
-            </td>
-          </ng-container>
+              </td>
+            </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-          <tr
-            mat-row
-            *matRowDef="let element; columns: columnsToDisplay"
-            class="example-element-row"
-            [class.example-expanded-row]="expandedElement === element"
-            (click)="
-              expandedElement = expandedElement === element ? null : element
-            "
-          ></tr>
-          <tr
-            mat-row
-            *matRowDef="let row; columns: ['expandedDetail']"
-            class="example-detail-row"
-          ></tr>
-        </table>
-      </mat-action-list>
+            <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+            <ng-container matColumnDef="expandedDetail">
+              <td
+                mat-cell
+                *matCellDef="let element"
+                [attr.colspan]="columnsToDisplay.length"
+              >
+                <div
+                  class="example-element-detail"
+                  [@detailExpand]="
+                    element == expandedElement ? 'expanded' : 'collapsed'
+                  "
+                >
+                  <div class="example-element-description">
+                    {{ element.content | replaceUnderscore }}
+                  </div>
+                </div>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+            <tr
+              mat-row
+              *matRowDef="let element; columns: columnsToDisplay"
+              class="example-element-row"
+              [class.example-expanded-row]="expandedElement === element"
+              (click)="
+                expandedElement = expandedElement === element ? null : element
+              "
+            ></tr>
+            <tr
+              mat-row
+              *matRowDef="let row; columns: ['expandedDetail']"
+              class="example-detail-row"
+            ></tr>
+          </table>
+        </mat-action-list>
       </mat-tab>
       <mat-tab>
         <ng-template mat-tab-label> Old Notifications </ng-template>
         <mat-action-list class="custom-scroll-bar">
-        <table
-          #oldnotif
-          mat-table
-          [dataSource]="dataSourceOld"
-          multiTemplateDataRows
-          class="mat-elevation-z8"
-        >
-          <ng-container
-            matColumnDef="{{ column }}"
-            *ngFor="let column of columnsToDisplay"
+          <table
+            #oldnotif
+            mat-table
+            [dataSource]="dataSourceOld"
+            multiTemplateDataRows
+            class="mat-elevation-z8"
           >
-            <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-              *ngIf="column == 'active'"
-                class="details"
-                matTooltip="Notification is inactive"
-              >
-                <mat-icon>highlight_off</mat-icon>
-              </button>
-              <div *ngIf="column == 'content'">
-                {{ element[column] | shortenString: [14, "..."] }}
-              </div>
-            </td>
-          </ng-container>
-
-          <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-          <ng-container matColumnDef="expandedDetail">
-            <td
-              mat-cell
-              *matCellDef="let element"
-              [attr.colspan]="columnsToDisplay.length"
+            <ng-container
+              matColumnDef="{{ column }}"
+              *ngFor="let column of columnsToDisplay"
             >
-              <div
-                class="example-element-detail"
-                [@detailExpand]="
-                  element == expandedElement ? 'expanded' : 'collapsed'
-                "
-              >
-                <div class="example-element-description">
-                  {{ element.content }}
+              <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+              <td mat-cell *matCellDef="let element">
+                <button
+                  *ngIf="column == 'active'"
+                  class="details"
+                  matTooltip="Notification is inactive"
+                >
+                  <mat-icon>highlight_off</mat-icon>
+                </button>
+                <div *ngIf="column == 'content'">
+                  {{ element[column] | shortenString: [14, "..."] }}
                 </div>
-              </div>
-            </td>
-          </ng-container>
+              </td>
+            </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-          <tr
-            mat-row
-            *matRowDef="let element; columns: columnsToDisplay"
-            class="example-element-row"
-            [class.example-expanded-row]="expandedElement === element"
-            (click)="
-              expandedElement = expandedElement === element ? null : element
-            "
-          ></tr>
-          <tr
-            mat-row
-            *matRowDef="let row; columns: ['expandedDetail']"
-            class="example-detail-row"
-          ></tr>
-        </table>
-      </mat-action-list>
+            <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+            <ng-container matColumnDef="expandedDetail">
+              <td
+                mat-cell
+                *matCellDef="let element"
+                [attr.colspan]="columnsToDisplay.length"
+              >
+                <div
+                  class="example-element-detail"
+                  [@detailExpand]="
+                    element == expandedElement ? 'expanded' : 'collapsed'
+                  "
+                >
+                  <div class="example-element-description">
+                    {{ element.content | replaceUnderscore }}
+                  </div>
+                </div>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+            <tr
+              mat-row
+              *matRowDef="let element; columns: columnsToDisplay"
+              class="example-element-row"
+              [class.example-expanded-row]="expandedElement === element"
+              (click)="
+                expandedElement = expandedElement === element ? null : element
+              "
+            ></tr>
+            <tr
+              mat-row
+              *matRowDef="let row; columns: ['expandedDetail']"
+              class="example-detail-row"
+            ></tr>
+          </table>
+        </mat-action-list>
       </mat-tab>
     </mat-tab-group>
 
